# uText

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE
cli/: CMakeLists.txt
cli/src/: main.cpp
lib/: CMakeLists.txt
lib/include/: lowerUpper.inc  uText.h  unicode.h
lib/src/: uText.cpp
